fix bug info on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,3 +64,10 @@
         max-width: 100%;
     }
 }
+
+@media (max-width: 534px) {
+    .about .about-content .personal-info .info-item {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
